# Perceptron

./: .gitignore  README.md  and.py  main.py  or.py  pyproject.toml
.github/workflows/: publish.yml
Perceptron Models/: or.model  perceptron_or_gate.model
Research notebooks/: Perceptron.ipynb
docs/: README.md  index.html  index.md
src/oneNeuron/: model.py
utils/: all_utils.py  model.py
